refactor: introduce contentful_editor_interface
Move the contentful_contenttype logic around editor interface to a new
resource contentful_editor_interface
